--- a/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
@@ -109,7 +109,7 @@
                                                     <rect key="frame" x="0.0" y="-20" width="400" height="320"/>
                                                     <subviews>
                                                         <stackView distribution="fillProportionally" orientation="vertical" alignment="leading" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" placeholderIntrinsicWidth="404" placeholderIntrinsicHeight="320" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RgY-ah-SAv">
-                                                            <rect key="frame" x="0.0" y="20" width="400" height="320"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="400" height="320"/>
                                                         </stackView>
                                                     </subviews>
                                                     <constraints>
@@ -135,7 +135,7 @@
                                             <rect key="frame" x="0.0" y="284" width="400" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
-                                        <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="WJp-14-XQg">
+                                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="WJp-14-XQg">
                                             <rect key="frame" x="384" y="0.0" width="16" height="300"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
@@ -201,18 +201,18 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                     </scrollView>
-                                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="uhV-2F-c5f">
-                                        <rect key="frame" x="0.0" y="559" width="40" height="40"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="79s-VE-roa"/>
-                                            <constraint firstAttribute="width" constant="40" id="Inv-Su-QOl"/>
-                                        </constraints>
-                                    </customView>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="ng9-0N-mwq">
                                         <rect key="frame" x="376" y="559" width="40" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="0tt-mh-Wyb"/>
                                             <constraint firstAttribute="height" constant="40" id="dkw-lq-6SS"/>
+                                        </constraints>
+                                    </customView>
+                                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="uhV-2F-c5f">
+                                        <rect key="frame" x="0.0" y="559" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="79s-VE-roa"/>
+                                            <constraint firstAttribute="width" constant="40" id="Inv-Su-QOl"/>
                                         </constraints>
                                     </customView>
                                 </subviews>
